Project/Web/k3s-webwelp/app/webwelp-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k3s-webwelp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webwelp
  namespace: k3s-webwelp
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: webwelp
  template:
    metadata:
      labels:
        app: webwelp
    spec:
      containers:
      - name: webwelp
        image: registry.gitlab.com/welpnetwork/k3s-webwelp:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
        ports:
        - containerPort: 5000
          name: webwelp-ui
        livenessProbe:
          tcpSocket:
            port: webwelp-ui
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: webwelp-ui
          initialDelaySeconds: 30
          periodSeconds: 10
      imagePullSecrets:
        - name: gitlab-registry
