Project/Web/k3s-webwelp/app/webwelp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webwelp-ui
  namespace: k3s-webwelp
spec:
  selector:
    app: webwelp
  ports:
  - name: webwelp-ui
    protocol: TCP
    targetPort: 5000
    port: 80
